# dagfs

./: .gitignore  LICENSE  README.md  pyproject.toml
paper/: README.md  algorithm2e.sty  bibliography.bib  main.tex  protocol_kgrid_baselines.md  protocol_pgrid_baselines.md
paper/figures/: pgrid_curve_avg_precision.csv  pgrid_curve_hamming_loss.csv  pgrid_curve_macro_f1.csv  pgrid_curve_macro_pr_auc.csv  pgrid_curve_micro_f1.csv  pgrid_curve_micro_pr_auc.csv  pgrid_curve_one_error.csv
paper/tables/: benchmark_means_p20.csv  display_map_control_srfs_lift.json  display_map_paper.json  negative_evidence_summary.json  table_ablation_additive_steps.tex  table_ablation_additive_summary.tex  table_avg_precision.tex  table_hamming.tex  table_macro_pr_auc.tex  table_macrof1.tex  table_main_f1_landscape.tex  table_main_hl_oneerror_landscape.tex  table_main_prauc_avgprec_landscape.tex  table_micro_pr_auc.tex  table_microf1.tex  table_one_error.tex  table_paired_invariance.tex  table_ranks.tex  table_stats.tex  toy_monotonicity_summary.json
paper/tables/control_srfs_lift/: benchmark_means_p20.csv  table_hamming.tex  table_macrof1.tex  table_microf1.tex  table_ranks.tex  table_stats.tex
scripts/: README.md  aggregate_kgrid_and_make_tables.py  eval_rankings_py_pgrid_fast.py  export_cv_splits_to_mat.py  make_pgrid_curves.py  plot_lift_split_ratio.py  prepare_new_datasets.py  run_dagfs_custom.py  smoke_test.py  toy_monotonicity_barrier.py
src/dagfs/: __init__.py
src/mlfs/: __init__.py  dagfs_v2.py
