[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagfs"
version = "0.1.0"
description = "DAGFS: Directed Additive Graph Feature Selection for multi-label learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "G. Atrunfio" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
experiments = [
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "scikit-multilearn>=0.2.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
